# hello_django

./: db.sqlite3  pyproject.toml
hello_app/: settings.py  urls.py
homepage/: views.py
homepage/templates/: index.html
