[tool.poetry]
name = "hello_django"
version = "0.1.0"
description = "first working django project"
authors = ["kbrooks87 <kbrooks10011987@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
